fix z-index

--- a/inputListOfValues/src/main/resources/org/omidbiz/renderkit/html/css/colorbox.css
+++ b/inputListOfValues/src/main/resources/org/omidbiz/renderkit/html/css/colorbox.css
@@ -2,7 +2,7 @@
     Colorbox Core Style:
     The following CSS is consistent between example themes and should not be altered.
 */
-#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:9999; overflow:hidden; -webkit-box-shadow: 0px 0px 19px -2px rgba(105,101,105,1);
+#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:1000000; overflow:hidden; -webkit-box-shadow: 0px 0px 19px -2px rgba(105,101,105,1);
 -moz-box-shadow: 0px 0px 19px -2px rgba(105,101,105,1);
 box-shadow: 0px 0px 19px -2px rgba(105,101,105,1);}
 #cboxWrapper {max-width:none;  }
