--- a/windowPopup/src/main/resources/org/omidbiz/renderkit/html/css/popupBox.css
+++ b/windowPopup/src/main/resources/org/omidbiz/renderkit/html/css/popupBox.css
@@ -7,7 +7,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 9999;
+	z-index: 1000000;
 	overflow: hidden;
 	-webkit-box-shadow: 0px 0px 19px -2px rgba(105, 101, 105, 1);
 	-moz-box-shadow: 0px 0px 19px -2px rgba(105, 101, 105, 1);
